# xstatic-bootstrap-scss

./: .gitreview  MANIFEST.in  README.txt  UPGRADING  setup.cfg  setup.py
xstatic/pkg/bootstrap_scss/: __init__.py
