[metadata]
name = XStatic-Bootstrap-SCSS
summary = Bootstrap-SCSS 3.3.7 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = http://getbootstrap.com/
keywords = bootstrap_scss xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
