[metadata]
name = XStatic-Bootstrap-SCSS
description = Bootstrap-SCSS 3.4.1.0 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://github.com/twbs/bootstrap-sass
keywords = bootstrap_scss xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
